--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "axios": "^0.20.0",
+    "node-fetch": "^2.6.1",
     "node-forge": "0.10.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
